# homework

./: .gitignore  Makefile  README.md  pyproject.toml
new_project/new_project/: settings.py  urls.py  views.py
new_project/new_project/new_project/templates/: index.html
