[tool.poetry]
name = "new-project"
version = "0.1.0"
description = ""
authors = ["jay.tsai <a72140959@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
chat-downloader = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
