[tool.poetry]
name = "new-project"
version = "0.1.0"
description = ""
authors = ["jay.tsai <a72140959@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
yt-dlp = "^2023.12.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
